--- a/java学习/.recommenders/caches/identified-project-coordinates.json
+++ b/java学习/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Program Files\\Java\\jre1.8.0_141","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"D:\\Github\\Wsc\\java学习\\Wsc","type":"PROJECT","hints":{"PROJECT_NAME":"Wsc"}},"ABSENT"]]
+[[{"location":"D:\\Github\\Wsc\\java学习\\Wsc","type":"PROJECT","hints":{"PROJECT_NAME":"Wsc"}},"ABSENT"],[{"location":"C:\\Program Files\\Java\\jre1.8.0_141","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
