--- a/android/Text/app/src/main/AndroidManifest.xml
+++ b/android/Text/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Main2Activity" />
-        <activity android:name=".ContextMenuActivity"></activity>
+        <activity android:name=".ContextMenuActivity" />
+        <activity android:name=".SubMenuActivity"></activity>
     </application>
 
 </manifest>
