--- a/android/Text/app/src/main/AndroidManifest.xml
+++ b/android/Text/app/src/main/AndroidManifest.xml
@@ -16,7 +16,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Main2Activity" />
+        <activity android:name=".Main2Activity" >
+                <intent-filter>
+                    <action android:name="com.example.activitytest.ACTION_START"/>
+                    <category android:name="android.intent.category.DEFAULT"/>
+                    <category android:name="com.example.activitytest.MY_CATEGORY"/>
+                </intent-filter>
+
+        </activity>
+
         <activity android:name=".ContextMenuActivity" />
         <activity android:name=".SubMenuActivity"></activity>
     </application>
