--- a/android/Text/app/src/main/AndroidManifest.xml
+++ b/android/Text/app/src/main/AndroidManifest.xml
@@ -19,6 +19,11 @@
             <intent-filter>
                 <action android:name="com.example.activitytest.ACTION_START"/>
                 <category android:name="android.intent.category.DEFAULT"/>
+                //隐式intent
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <data android:scheme="tel"/>
+               <!-- <data android:scheme="geo"/>-->
                 </intent-filter>
         </activity>
         <activity android:name=".ContextMenuActivity" />
